testing/Travis/testcases/Parsing/shouldSucceed/Issue1189.adl
CONTEXT Issue1189

RELATION r[A * B] TGT EVALPHP "getdate()" SRC VALUE 10
REPRESENT A TYPE INTEGER
REPRESENT B TYPE DATE --beware, the PHP function is not validated by the Ampersand typechecker.
ENDCONTEXT

