testing/Travis/testcases/Parsing/shouldFail/Issue923.adl
CONTEXT Issue923

RELATION r[A*A]

RULE R : r = -r 
VIOLATION (TXT "Source atom: ", SRC I, TXT ", Target atom:", TGT I")

ENDCONTEXT